[package]
name = "hft-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.18"
simd-json = "0.9"
