[package]
name = "hft-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full", "rt-multi-thread", "macros", "time"] }
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
futures-util = "0.3"
hyper = { version = "0.14", features = ["client", "http1"] }
hyper-tls = "0.5"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
serde_json = "1.0"
once_cell = "1.18"
log = "0.4"
env_logger = "0.10"
