[package]
name = "hft-bot"
version = "0.1.0"
edition = "2021"[dependencies]
tokio = { version = "1", features = ["full", "rt-multi-thread", "macros", "time"] }
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
serde_json = "1.0"
once_cell = "1.18"  # For Lazy static initialization
simd-json = "0.9"  # Faster JSON parsing
serde = { version = "1.0", features = ["derive"] }  # For JSON serialization/deserialization
log = "0.4"
env_logger = "0.10"

